# test

./: CMakeCache.txt  CMakeLists.txt  cpuA.hpp  gpuA.hpp  main.cpp
